--- a/views/login.html
+++ b/views/login.html
@@ -41,7 +41,7 @@
 
 			<ul class="navbar-nav">
 				  <li class="nav-item">
-					<a class="nav-link" href='register.html'>Register</a>
+					<a class="nav-link" href='Register'>Register</a>
 				  </li>
 			</ul>
 		
