--- a/views/register.html
+++ b/views/register.html
@@ -41,7 +41,7 @@
 
 			<ul class="navbar-nav">
 				  <li class="nav-item">
-					<a class="nav-link" href='login.html'>Login</a>
+					<a class="nav-link" href='BackToLogin'>Login</a>
 				  </li>
 			</ul>
 		
