--- a/views/htmlTable.html
+++ b/views/htmlTable.html
@@ -24,6 +24,7 @@
     <script src="../scripts/loadDisease.js"></script>
     <script src="../scripts/simulationControls.js"></script>
     <script src="../scripts/sleep.js"></script>
+    <script src="../scripts/oceanCells.js"></script>
     <script src="../scripts/outbreak.js"></script><!--including the neighborhood class and state class-->
     <script src="../scripts/graphCheck.js"></script><!--including the GraphCheck class for the outbreak-->
   </head>
@@ -121,7 +122,7 @@
         <i id="pause-btn-icon" class="gg-play-pause-o"></i>
         <div id="pause-btn-text">Pause</div>
       </div>
-      <div id="reset-btn" class="simulation-btns-style">
+      <div id="reset-btn" class="simulation-btns-style" onclick="resetSimulation()">
         <i id="reset-btn-icon" class="gg-undo"></i>
         <div id="reset-btn-text">Reset</div>
       </div>
@@ -130,7 +131,7 @@
     <script src="../scripts/toggleSlideMenu.js"></script>
 
     <script>
-      threshold = 1;//represents the amount of adjacent neighbors that can cause a suceptible neighbor to become infected
+      threshold = 2;//represents the amount of adjacent neighbors that can cause a suceptible neighbor to become infected
       infectionPeriod =5;//represetns how long the neighborhood is infected
       
     
@@ -156,12 +157,7 @@
         table += "<tr>";
         for(j = 0; j < numCols; j++)
         {
-          if (i == 0) {
-            table += '<td class="graph-td" style="border-top: 2px solid black"></td>'; //adds a top border to the graph
-          }
-          else {
-            table += '<td class="graph-td"></td>';
-          }
+          table += '<td id="' + (i * numCols + j).toString() + '" class="graph-td"></td>';
         }
         table += "</tr>"
       }
@@ -177,40 +173,46 @@
       let numRecovered =0;
       let numsusceptible =0;
       
-      //randomly set states to the graph
-      for(i=0; i < x.length; i++)//number of columns in the graph
-      {
-        if(infection < 2)
+      while (numInfected == 0) { //ensures at least 1 starting location is chosen
+        //randomly set states to the graph
+        for(i=0; i < x.length; i++)//number of columns in the graph
         {
-          x[i].style.backgroundColor = "red";//infected
-          neighborhood[i].setStatus("red");
-          //console.log(neighborhood[i].getStatus());
-          //numInfected++;
+          if (!isOceanCell(i)) {
+            if(infection < 2 && numInfected < 1) //1 starting location
+            {
+              x[i].style.backgroundColor = "red";//infected
+              neighborhood[i].setStatus("red");
+              //console.log(neighborhood[i].getStatus());
+              numInfected++;
+            }
+            else if(infection > (numRows * .02) && infection <= (numRows * 2.6))
+            {
+              //console.log("vacinated at " +i);
+              x[i].style.backgroundColor = "blue";//vacinated
+              neighborhood[i].setStatus("blue");
+              //console.log(neighborhood[i].getStatus());
+            }
+            else if(infection > (numRows *2.6) && infection <= (numRows *3.0))
+            {
+              x[i].style.backgroundColor = "green";//recovered
+              neighborhood[i].setStatus("green");
+              //console.log(neighborhood[i].getStatus());
+            }
+            else
+            {
+              x[i].style.backgroundColor = "yellow";//susceptible
+              neighborhood[i].setStatus("yellow");
+            }
+            infection = Math.floor(Math.random()*(numRows * numRows));
+          }
         }
-        else if(infection > (numRows * .02) && infection <= (numRows * 2.6))
-        {
-          //console.log("vacinated at " +i);
-          x[i].style.backgroundColor = "blue";//vacinated
-          neighborhood[i].setStatus("blue");
-          //console.log(neighborhood[i].getStatus());
-        }
-        else if(infection > (numRows *2.6) && infection <= (numRows *3.0))
-        {
-          x[i].style.backgroundColor = "green";//recovered
-          neighborhood[i].setStatus("green");
-          //console.log(neighborhood[i].getStatus());
-        }
-        else
-        {
-          x[i].style.backgroundColor = "yellow";//susceptible
-          neighborhood[i].setStatus("yellow");
-        }
-        infection = Math.floor(Math.random()*(numRows * numRows));
+        //console.log(neighborhood[50].getStatus());
       }
-      //console.log(neighborhood[50].getStatus());
+      
     </script>
 
     <script>
+      
       document.getElementById("start-btn").onclick = function() {startSimulation()};//will start the disease outbreak after the start 
       //button has been pressed.
     
@@ -220,13 +222,12 @@
           let z =0;
           display = 2; //represents the stoping point 
           let outbreak = true;
-          console.log(outbreak);
-          console.log(neighborhood.length);
+          //console.log(outbreak);
+          //console.log(neighborhood.length);
           while(outbreak === true && z < display)
           {
             
             numInfected =0; //resetting the number of infected neighborhoods
-            console.log('nb: ' + neighborhood.length);
             for(i=0; i < neighborhood.length; i++)//number of columns in the graph
             {
               if(i === 0)
@@ -303,12 +304,15 @@
         }
       }
       //another loop needed to chenge states (infected to recovered or susceptible to infected)
+      
     </script>
-  
+  <!--
     <script>
       var table = document.getElementById("graph");
       var row = table.insertRow(0);
       row.height="5px";
     </script>
+
+  -->
   </body>
 </html>
