--- a/views/htmlTable.html
+++ b/views/htmlTable.html
@@ -23,7 +23,7 @@
     <script src="../scripts/createDisease.js"></script>
     <script src="../scripts/loadDisease.js"></script>
     <script src="../scripts/sleep.js"></script>
-    <script src="../scripts/outbreak/simulationControls.js"></script>
+    <script src="../scripts/simulationControls.js"></script>
     <script src="../scripts/outbreak/oceanCells.js"></script>
     <script src="../scripts/outbreak/outbreak.js"></script><!--including the neighborhood class and state class-->
     <script src="../scripts/outbreak/graphCheck.js"></script><!--including the GraphCheck class for the outbreak-->
@@ -55,11 +55,14 @@
         <label for="infRate">Infection Rate: </label>
         <input id="infection-rate-field" type="text" name="infRate" value="50" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
         <br>
+        <label for="deathRate">Death Rate: </label>
+        <input id="death-rate-field" type="text" name="deathRate" value="10" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
+        <br>
         <label for="threshold">Threshold: </label>
         <input id="threshold-field" type="text" name="threshold" value="1" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
         <br>
-        <label for="numDays">No. of Days: </label>
-        <input id="num-days-field" type="text" name="numDays" value="365" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
+        <label for="numWeeks">No. of Weeks: </label>
+        <input id="num-weeks-field" type="text" name="numWeeks" value="365" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
 
         <div id="popups">
           <div id="diseaseName-popup" class="popup-style">
@@ -70,12 +73,16 @@
             <b>Infection Rate: </b>The rate at which the disease spreads. Enter a number between 1 and 100.
             <div id=popup-arrow></div>
           </div>
+          <div id="deathRate-popup" class="popup-style">
+            <b>Death Rate: </b>The rate at which infected people die from the disease. Enter a number between 1 and 100.
+            <div id=popup-arrow></div>
+          </div>
           <div id="threshold-popup" class="popup-style">
             <b>Threshold: </b>How many adjacent infected neighborhoods are required to infect a neighborhood? Enter a number from 1 to 8.
             <div id=popup-arrow></div>
           </div>
-          <div id="numDays-popup" class="popup-style">
-            <b>No. of Days: </b>Enter the number of days the disease will last.
+          <div id="numWeeks-popup" class="popup-style">
+            <b>No. of Weeks: </b>Enter the number of weeks the disease will last.
             <div id=popup-arrow></div>
           </div>
         </div>
