fixing routing issues between the homepage and the outbreak simulation

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -21,7 +21,7 @@
                 <ul class="nav__list">
                     <li class="nav__list-item"><a href="#" class="nav__link">Home</a></li>
                     <li class="nav__list-item">
-                        <a href="htmlTable.html" class="nav__link">Simulation</a>
+                        <a href="Simulation" class="nav__link">Simulation</a>
                     </li>
                     <li class="nav__list-item">
                         <a href="#" class="nav__link">About us</a>
