--- a/views/htmlTable.html
+++ b/views/htmlTable.html
@@ -35,7 +35,7 @@
     
     <nav class="main-nav">
       <ul class="nav__list">
-          <li class="nav__list-item"><a href="../views/homepage.html" class="nav__link">Home</a></li>
+          <li class="nav__list-item"><a href="homepage" class="nav__link">Home</a></li>
           <li class="nav__list-item"><a href="#" class="nav__link">About us</a></li>
       </ul>
     </nav>
