Added disease jumping and population densities

--- a/views/htmlTable.html
+++ b/views/htmlTable.html
@@ -24,6 +24,7 @@
     <script src="../scripts/loadDisease.js"></script>
     <script src="../scripts/sleep.js"></script>
     <script src="../scripts/simulationControls.js"></script>
+    <script src="../scripts/outbreak/denseCells.js"></script>
     <script src="../scripts/outbreak/oceanCells.js"></script>
     <script src="../scripts/outbreak/outbreak.js"></script><!--including the neighborhood class and state class-->
     <script src="../scripts/outbreak/graphCheck.js"></script><!--including the GraphCheck class for the outbreak-->
