Adding more to homepage design with Custom Disease

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -19,12 +19,17 @@
             <a href="homepage.html" class="site-logo" aria-label="homepage">Project Outbreak</a>
             <nav class="main-nav">
                 <ul class="nav__list">
-                    <li class="nav__list-item"><a href="#" class="nav__link">Home</a></li>
+                    <li class="nav__list-item">
+                        <a href="homepage.html" class="nav__link">Home</a>
+                    </li>
                     <li class="nav__list-item">
                         <a href="htmlTable.html" class="nav__link">Simulation</a>
                     </li>
                     <li class="nav__list-item">
                         <a href="#" class="nav__link">About us</a>
+                    </li>
+                    <li class="nav__list-item">
+                        <a href="https://www.givedirectly.org/covid-19/us/" target="_blank" class ="nav__link">COVID Relief Fund</a>
                     </li>
                 </ul>
             </nav>
@@ -103,9 +108,9 @@
             <a class="read-more special-link-format" href="https://www.historytoday.com/archive/black-death-greatest-catastrophe-ever"
                 target="_blank">Read more on Black Plague</a>
         </div>
-
+                <!--ebola virus information/ picture-->
         <div class ="bubonic-plague fade-in"> 
-            <h3>Zaire ebolavirus <em><span>&#40;Ebola Virus<span>&#41;</span></em></h3>
+            <h3>Zaire ebolavirus <em><span>&#40;Ebola Virus&#41;</span></em></h3>
         </div>
             <img class="wide-image fade-in" src ="../images/ebola-virus.jpg" width="100%" height="500" alt ="micro sacle picture of ebola virus">
         <div class="disease-text fade-in">
@@ -114,12 +119,30 @@
             Scientists do not know where Ebola virus comes from. However, based on the nature of similar viruses, they believe the
             virus is animal-borne, with bats or nonhuman primates with bats or nonhuman primates (chimpanzees, apes, monkeys, etc.)
             being the most likely source. Infected animals carrying the virus can transmit it to other animals, like apes, monkeys,
-            duikers and humans.
-            
+            duikers and humans.</p>
+            <p>
             The virus spreads to people initially through direct contact with the blood, body fluids and tissues of animals. Ebola
             virus then spreads to other people through direct contact with body fluids of a person who is sick with or has died from
-            EVD.</p>
+            EVD. Signs and symptoms typically start between two days and three weeks after contracting the virus with a fever, sore
+            throat, muscular pain, and headaches. Vomiting, diarrhoea and rash usually follow, along with decreased function of
+            the liver and kidneys. At this time, some people begin to bleed both internally and externally. The disease has a
+            high risk of death, killing 25% to 90% of those infected, with an average of about 50%. This is often due to low
+            blood pressure from fluid loss, and typically follows six to 16 days after symptoms appear.</p>
+            <a class="read-more special-link-format" href="https://www.concernusa.org/story/west-african-ebola-epidemic/?gclid=CjwKCAjw0_T4BRBlEiwAwoEiAUwF_hBiIPVlvJSXMjm7Z4yWyclYvlgd5bhH-oT6VGjgN44q_C0g_RoC4ioQAvD_BwE"
+                    target="_blank">Read more on Ebola Virus</a>
         </div>
+
+        <div class ="bubonic-plague fade-in">
+            <h3>Custom Disease</h3>
+        </div>
+        <img class="wide-image fade-in" src ="../images/customDisease.jpg" width="100%" height="400" alt="dna sequence picture for custom virus">
+        <div class="disease-text fade-in">
+            <p>Our simluation allows you to create your own disease with different attibutes to see how your disease would spread. You can create an 
+                account to save diseases inorder to reuse your custom creations in the future! Give your disease a <span>Name</span>, <span>infection rate</span>, and <span>threshold</span>. Edit how 
+                many days your disease would spread across the United States. Check it out with the link below the screenshot!
+            </p>
+        </div>
+
 
         <!--picture of simluation with link to simulation page-->
         <img id="screenshot" src="../images/place-holder.jpg" alt ="Screenshot of simulator">
@@ -139,7 +162,8 @@
                 <cite>[2] https://www.history.com/</cite>
                 <cite>[3] https://ourworldindata.org/</cite>
                 <br>
-                <cite>[4] https://www.arcgis.com/apps/opsdashboard/index.html#/bda7594740fd40299423467b48e9ecf6</cite>
+                <cite>[4] https://www.arcgis.com/</cite>
+                <cite>[5] https://www.concernusa.org/</cite>
             </div>
         </footer>
 
