--- a/css/homepageStyle.css
+++ b/css/homepageStyle.css
@@ -62,7 +62,9 @@ p a:hover {
 		background-blend-mode: multiply;
 	}
 	.wide-image {
-		width: 1500px;
+		width: 1175px;
+		margin-left: 75px;
+		margin-right: 75px;
 	}
 }
 .site-logo {
@@ -94,6 +96,7 @@ header {
 	margin: 0;
 	padding: 0;
 	display: flex;
+	align-items: center;
 }
 
 .nav__link {
