Fixed the hyperlinking to our website

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -146,11 +146,11 @@
 
         <!--picture of simluation with link to simulation page-->
         <img id="screenshot" src="../images/place-holder.jpg" alt ="Screenshot of simulator">
-        <a id="simulator-page-link" class="special-link-format" href='Simulation'>
+        <a id="simulator-page-link" class="special-link-format" href='htmlTable.html'>
             <div id="simulator-page-link-text">Go to Simulator</div>
             <i id="simulator-page-link-icon" class="gg-arrow-right-o"></i>
         </a>
-        <a id="top-shortcut" class="special-link-format" href="#banner-homepage">
+        <a id="top-shortcut" class="special-link-format" href="banner-homepage">
             <div class="shortcut-text">Top</div>
             <i class="shortcut-icon gg-push-chevron-up"></i>
         </a>
