adding instructions to the readme

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -146,7 +146,7 @@
 
         <!--picture of simluation with link to simulation page-->
         <img id="screenshot" src="../images/place-holder.jpg" alt ="Screenshot of simulator">
-        <a id="simulator-page-link" class="special-link-format" href='htmlTable.html'>
+        <a id="simulator-page-link" class="special-link-format" href='Simulation'>
             <div id="simulator-page-link-text">Go to Simulator</div>
             <i id="simulator-page-link-icon" class="gg-arrow-right-o"></i>
         </a>
