--- a/css/homepageStyle.css
+++ b/css/homepageStyle.css
@@ -252,12 +252,16 @@ header {
 	opacity: 1;
 }
 
+#simulator-heading {
+	margin-top: 55px;
+	text-align: center;
+}
 #screenshot {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	width: 50%;
-	padding-top: 55px;
+	border: 2px solid black;
 }
 #simulator-page-link {
 	display: block;
