--- a/views/homepage.html
+++ b/views/homepage.html
@@ -145,7 +145,8 @@
 
 
         <!--picture of simluation with link to simulation page-->
-        <img id="screenshot" src="../images/place-holder.jpg" alt ="Screenshot of simulator">
+        <h1 id="simulator-heading">The Simulator</h1>
+        <img id="screenshot" src="../images/simulation-screenshot.png" alt ="Screenshot of simulator">
         <a id="simulator-page-link" class="special-link-format" href='Simulation'>
             <div id="simulator-page-link-text">Go to Simulator</div>
             <i id="simulator-page-link-icon" class="gg-arrow-right-o"></i>
