--- a/views/simulator.html
+++ b/views/simulator.html
@@ -1,6 +1,3 @@
-<!--Each table row is defined with the <tr> tag. A table header is defined with the <th> tag.
-  By default, table headings are bold and centered. A table data/cell is defined with the <td> tag.-->
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -8,7 +5,7 @@
 
     <!-- Inherits some styles from the homepage -->
     <link href="../css/homepageStyle.css" rel="stylesheet">
-    <link href="../css/htmlTableStyle.css" rel="stylesheet">
+    <link href="../css/simulatorStyle.css" rel="stylesheet">
     <link href='https://css.gg/menu.css' rel='stylesheet'>
     <link href='https://css.gg/import.css' rel='stylesheet'>
     <link href='https://css.gg/erase.css' rel='stylesheet'>
@@ -63,7 +60,7 @@
         <input id="threshold-field" type="text" name="threshold" value="1" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
         <br>
         <label for="numWeeks">No. of Weeks: </label>
-        <input id="num-weeks-field" type="text" name="numWeeks" value="365" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
+        <input id="num-weeks-field" type="text" name="numWeeks" value="52" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
 
         <div id="popups">
           <div id="diseaseName-popup" class="popup-style">
@@ -136,6 +133,8 @@
         <div id="reset-btn-text">Reset</div>
       </div>
     </div>
+
+    <div id="graph-placeholder"></div>
 
     <script src="../scripts/outbreak/createTable.js"></script>
     <script src="../scripts/toggleSlideMenu.js"></script>
