--- a/views/homepage.html
+++ b/views/homepage.html
@@ -138,8 +138,8 @@
         <img class="wide-image fade-in" src ="../images/customDisease.jpg" width="100%" height="400" alt="dna sequence picture for custom virus">
         <div class="disease-text fade-in">
             <p>Our simluation allows you to create your own disease with different attibutes to see how your disease would spread. You can create an 
-                account to save diseases inorder to reuse your custom creations in the future! Give your disease a <span>Name</span>, <span>infection rate</span>, and <span>threshold</span>. Edit how 
-                many days your disease would spread across the United States. Check it out with the link below the screenshot!
+                account to save diseases inorder to reuse your custom creations in the future! Give your disease a <b>name</b>, <b>infection</b>, <b>death rate</b>, and
+                 <b>threshold</b>. Edit how many days your disease would spread across the United States. Check it out with the link below the screenshot!
             </p>
         </div>
 
