--- a/views/simulator.html
+++ b/views/simulator.html
@@ -135,7 +135,12 @@
     </div>
 
     <div id="graph-placeholder"></div>
-
+    <div id="legend">
+      <h3>Legend</h3>
+      </div>
+      <div class="legend-text">
+        
+      </div>
     <script src="../scripts/outbreak/createTable.js"></script>
     <script src="../scripts/toggleSlideMenu.js"></script>
   </body>
