--- a/css/simulatorStyle.css
+++ b/css/simulatorStyle.css
@@ -174,6 +174,7 @@
 .popup-style:hover {
 	cursor: pointer;
 }
+
 #diseaseName-popup {
 	position: relative;
 	width: 150px;
@@ -405,4 +406,20 @@
 	position: relative;
 	left: 6px;
 	bottom: 367px;
+}
+#legend {
+	color: #313333;
+	margin-left: 75px;
+	margin-right: 100px;
+	text-align: center;
+	font-size: 32px;
+	font-weight: 700;
+}
+.legend-text {
+	color: #313333;
+	margin-left: 75px;
+	margin-right: 100px;
+	text-align: center;
+	font-size: 18px;
+	font-weight: 300;
 }
