--- a/views/homepage.html
+++ b/views/homepage.html
@@ -16,11 +16,11 @@
     <body> 
 
         <header>
-            <a href="homepage.html" class="site-logo" aria-label="homepage">Project Outbreak</a>
+            <a href="homepage" class="site-logo" aria-label="homepage">Project Outbreak</a>
             <nav class="main-nav">
                 <ul class="nav__list">
                     <li class="nav__list-item">
-                        <a href="homepage.html" class="nav__link">Home</a>
+                        <a href="homepage" class="nav__link">Home</a>
                     </li>
                     <li class="nav__list-item">
                         <a href="Simulation" class="nav__link">Simulation</a>
@@ -36,10 +36,10 @@
             <nav class="account">
                 <ul class="nav__list">
                     <li class="nav__list-item">
-                        <a class="nav__link nav__link--btn" href="login.html">Login</a>
+                        <a class="nav__link nav__link--btn" href="login">Login</a>
                     </li>
                     <li class="nav__list-item">
-                        <a class="nav__link nav__link--btn nav__link--btn--highlight" href="#">Join</a>
+                        <a class="nav__link nav__link--btn nav__link--btn--highlight" href="register">Join</a>
                     </li>
                 </ul>
             </nav>
@@ -151,7 +151,7 @@
             <div id="simulator-page-link-text">Go to Simulator</div>
             <i id="simulator-page-link-icon" class="gg-arrow-right-o"></i>
         </a>
-        <a id="top-shortcut" class="special-link-format" href="banner-homepage">
+        <a id="top-shortcut" class="special-link-format" href="homepage">
             <div class="shortcut-text">Top</div>
             <i class="shortcut-icon gg-push-chevron-up"></i>
         </a>
