--- a/css/simulatorStyle.css
+++ b/css/simulatorStyle.css
@@ -57,6 +57,7 @@
 	background-image: url("../images/virus-banner.jpg");
 	background-size: 100% 400%;
 	z-index: 5;
+	font-family: font-family: 'Raleway', sans-serif;;
 }
 @media (max-width: 1500px) {
 	#banner-simulation {
@@ -412,7 +413,7 @@
 	margin-bottom: 15px;
 	font-weight: bold;
 	font-size: 30px;
-	margin-left: 550px;
+	margin-left: 520px;
 	opacity: .8;
 	font-family: 'Raleway', sans-serif;
 }
@@ -427,7 +428,7 @@
 	display: block;
 	float: left;
 	width: 50px;
-	margin-bottom: 6px;
+	margin-bottom: 50px;
 	text-align: right;
 	font-size: 20px;
 	list-style: none;
