--- a/views/register.html
+++ b/views/register.html
@@ -10,18 +10,19 @@
 		<title>Project Outbreak | Register</title>
 	</head>
 	<body>
+		<div id="gradient-effect"></div>
+		
 		<nav class="navbar navbar-expand-sm bg-dark">
-
 			<ul class="navbar-nav">
 				  <li class="nav-item">
 					<a class="nav-link" href='BackToLogin'>Login</a>
 				  </li>
 			</ul>
 		
+			<div id="project-title">Project Outbreak</div>
 		</nav>
-		<section class="jumbotron">
+
 		<div class="login-form">
-			
 			<h1>Register</h1>
 			<form action="register" method="POST">
 				<input type="text" name="firstname" placeholder="firstname" required>
@@ -29,9 +30,7 @@
 				<input type="text" name="username" placeholder="Username" required>
 				<input type="password" name="password" placeholder="Password" required>
 				<input type="submit">
-			
 			</form>
 		</div>
-		</section>
 	</body>
 </html> 
