--- a/views/simulator.html
+++ b/views/simulator.html
@@ -136,6 +136,8 @@
       </div>
     </div>
 
+    <div id="week-counter">Week: 0</div>
+
     <div id="graph-placeholder"></div>
 
         <div class='my-legend'>
@@ -143,7 +145,7 @@
           <div class='legend-scale'>
             <ul class='legend-labels'>
               <li><span style='background:#3bb117c2;'></span>Recovered</li>
-              <li><span style='background: #3e24e6b9;;'></span>Vacinated</li>
+              <li><span style='background: #3e24e6b9;;'></span>Vaccinated</li>
               <li><span style='background:#e62424b2;'></span>Infected</li>
               <li><span style='background:#2c2b2bad;'></span>Dead</li>
             </ul>
