--- a/css/loginRegisterStyle.css
+++ b/css/loginRegisterStyle.css
@@ -1,10 +1,20 @@
-.body {
-  background-color: lime;
+body {
+  font-family: 'Times New Roman', Times, serif;
 }
 
-.jumbotron {
-  border: 100px;
-  padding: 30px;
+#gradient-effect {
+  position: absolute;
+  left: 0px;
+  top: 30px;
+  width: 100%;
+  height: 500px;
+  background-image: linear-gradient(rgb(197, 197, 197), white);
+  z-index: -1;
+}
+
+.navbar {
+  background-image: url(../images/virus-banner.jpg);
+  background-size: 100% 700%;
 }
 
 .nav-link {
@@ -18,10 +28,21 @@
   background-color: rgb(92, 92, 92);
 }
 
+#project-title {
+  color: white;
+  font-size: 32px;
+  font-weight: 700;
+  margin: 0 auto;
+  position: absolute;
+  right: 58%;
+  left: 43%;
+  width: 240px;
+}
+
 .login-form h1 {
   text-align: center;
-  color: limegreen;
-  font-size: 24px;
+  color: rgb(39, 39, 39);
+  font-size: 32px;
   padding: 20px 0 20px 0;
 }
 
@@ -29,7 +50,7 @@
   width: 400px;
   margin: 0 auto;
   margin-top: 40px;
-  font-family: Tahoma, Geneva, sans-serif;
+  
 }
 
 .login-form input[type="password"],
@@ -49,4 +70,8 @@
   cursor: pointer;
 
   color: #ffffff;
+}
+.login-form input[type="submit"]:hover {
+  background-color: rgb(40, 170, 40);
+  
 }
