--- a/views/login.html
+++ b/views/login.html
@@ -10,26 +10,25 @@
 		<title>Project Outbreak | Login</title>
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-sm bg-dark">
+		<div id="gradient-effect"></div>
 
+		<nav class="navbar navbar-expand-sm bg-dark">
 			<ul class="navbar-nav">
 				  <li class="nav-item">
 					<a class="nav-link" href='Register'>Register</a>
 				  </li>
 			</ul>
-		
+
+			<div id="project-title">Project Outbreak</div>
 		</nav>
-		<section class="jumbotron">
+
 		<div class="login-form">
-			
 			<h1>Login</h1>
 			<form action="login" method="POST">
 				<input type="text" name="username" placeholder="Username" required>
 				<input type="password" name="password" placeholder="Password" required>
 				<input type="submit">
-			
 			</form>
 		</div>
-		</section>
 	</body>
 </html> 
