Dropdown box now works with SQL

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -33,6 +33,7 @@
                     </li>
                 </ul>
             </nav>
+            <div id="login-btns-placeholder"></div>
             <nav class="account">
                 <ul class="nav__list">
                     <li class="nav__list-item">
@@ -167,7 +168,7 @@
                 <cite>[5] https://www.concernusa.org/</cite>
             </div>
         </footer>
-
+        
         <!--javascript file for fading scroll effect-->
         <script src="../scripts/scrollEffect.js"></script>
     </body>
