--- a/views/simulator.html
+++ b/views/simulator.html
@@ -17,7 +17,8 @@
     <link href='https://css.gg/export.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto+Condensed:wght@300&display=swap"
       rel="stylesheet">
-    
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="../scripts/popupBoxes.js"></script>
     <script src="../scripts/createDisease.js"></script>
     <script src="../scripts/loadDisease.js"></script>
@@ -59,7 +60,7 @@
         <input id="death-rate-field" type="text" name="deathRate" value="10" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
         <br>
         <label for="threshold">Threshold: </label>
-        <input id="threshold-field" type="text" name="threshold" value="1" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
+        <input id="threshold-field" type="text" name="threshold" value="2" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
         <br>
         <label for="numWeeks">No. of Weeks: </label>
         <input id="num-weeks-field" type="text" name="numWeeks" value="52" onfocus="showPopup(name)" onfocusout="resetAllPopups()">
